started styling and structure of homepage

--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Damian Gabriel</title>
-    <link rel="stylesheet" href="./src/css/style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./src/css/style.css" />
+  </head>
+  <body>
+    <div id="homepage-wrapper">
+      <div class="container">
+        <nav>
+          <ul class="navbar">
+            <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Projects</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Archive</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+          </ul>
+        </nav>
+        <main>
+          <h1><span>Hey! I'm</span><span>DAMIAN</span></h1>
+          <h5>
+            As an art-loving movie buff, music aficiando, chess enthusiast, and
+            avid learner, <span>I thrive as a programmer</span>
+          </h5>
+        </main>
+        <footer>
+          <h6>32C Lagos, NG</h6>
+          <div class="music-cont">
+            <img id="spotify-logo" src="./assets/img/spotify" alt="spotify_logo" />
+          </div>
+          <div class="music-info">
+            <h6 class="music-title">Off the Knob</h6>
+            <h6 class="music-artist">Marlon Craft</h6>
+          </div>
+          <p>On repeat</p>
+        </footer>
+      </div>
+    </div>
+  </body>
 </html>
