completed home page to a large degree

--- a/index.html
+++ b/index.html
@@ -8,32 +8,54 @@
   </head>
   <body>
     <div id="homepage-wrapper">
-      <div class="container">
+      <div id="home" class="container">
         <nav>
           <ul class="navbar">
-            <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Projects</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Archive</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Archive</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">About</a>
+            </li>
           </ul>
         </nav>
         <main>
-          <h1><span>Hey! I'm</span><span>DAMIAN</span></h1>
+          <h1>
+            <span>Hey! I'm</span>
+            <span>DAM<i>I</i>AN</span>
+          </h1>
           <h5>
             As an art-loving movie buff, music aficiando, chess enthusiast, and
-            avid learner, <span>I thrive as a programmer</span>
+            avid learner, I thrive as a programmer
           </h5>
         </main>
         <footer>
           <h6>32C Lagos, NG</h6>
           <div class="music-cont">
-            <img id="spotify-logo" src="./assets/img/spotify" alt="spotify_logo" />
+            <img src="./assets/img/spot-logo_blk.png" alt="spot-logo" />
+            <div class="music-info">
+              <h6 class="music-title">Off the Knob</h6>
+              <h6 class="music-artist">Marlon Craft</h6>
+            </div>
+            <p>On repeat</p>
           </div>
-          <div class="music-info">
-            <h6 class="music-title">Off the Knob</h6>
-            <h6 class="music-artist">Marlon Craft</h6>
+          <div class="social-links">
+            <a target="_blank" href="https://github.com/Gabbydamian"
+              ><img src="./assets/img/svgs/github.svg" alt="github"
+            /></a>
+            <a target="_blank" href="https://twitter.com"
+              ><img src="./assets/img/svgs/twitter.svg" alt="twitter"
+            /></a>
+            <a target="_blank" href=""
+              ><img src="./assets/img/svgs/linkedin.svg" alt="linkedin"
+            /></a>
           </div>
-          <p>On repeat</p>
         </footer>
       </div>
     </div>
