completed projects page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Damian Gabriel</title>
     <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="stylesheet" href="./src/css/base.css" />
   </head>
   <body>
     <div id="homepage-wrapper">
@@ -12,10 +13,10 @@
         <nav>
           <ul class="navbar">
             <li class="nav-item">
-              <a href="#" class="nav-link">Home</a>
+              <a href="./index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Projects</a>
+              <a href="./src/pages/projects.html" class="nav-link">Projects</a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link">Archive</a>
@@ -38,7 +39,7 @@
         <footer>
           <h6>32C Lagos, NG</h6>
           <div class="music-cont">
-            <img src="./assets/img/spot-logo_blk.png" alt="spot-logo" />
+            <img src="./assets/img/logos/spot-logo_blk.png" alt="spot-logo" />
             <div class="music-info">
               <h6 class="music-title">Off the Knob</h6>
               <h6 class="music-artist">Marlon Craft</h6>
@@ -47,13 +48,13 @@
           </div>
           <div class="social-links">
             <a target="_blank" href="https://github.com/Gabbydamian"
-              ><img src="./assets/img/svgs/github.svg" alt="github"
+              ><img src="./assets/img/logos/github.svg" alt="github"
             /></a>
             <a target="_blank" href="https://twitter.com"
-              ><img src="./assets/img/svgs/twitter.svg" alt="twitter"
+              ><img src="./assets/img/logos/twitter.svg" alt="twitter"
             /></a>
             <a target="_blank" href=""
-              ><img src="./assets/img/svgs/linkedin.svg" alt="linkedin"
+              ><img src="./assets/img/logos/linkedin.svg" alt="linkedin"
             /></a>
           </div>
         </footer>
