--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
               <a href="./src/pages/projects.html" class="nav-link">Projects</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Archive</a>
+              <a href="./src/pages/archive.html" class="nav-link">Archive</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">About</a>
+              <a href="./src/pages/about.html" class="nav-link">About</a>
             </li>
           </ul>
         </nav>
